<resources>
    <string name="app_name">Team4</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="text_signin_title">Welcome to gibber!</string>
    <string name="text_signin_email">Email: </string>
    <string name="text_signin_password">Password: </string>
    <string name="edit_signin_email">Enter Email</string>
    <string name="edit_signin_password">Enter Password </string>
    <string name="text_register_title">Create an Account!</string>
    <string name="button_signin_signin">Sign In</string>
    <string name="button_signin_register">Create an Account</string>
    <string name="text_home_welcome">Welcome Back</string>
    <string name="text_home_name">Name</string>
    <string name="text_home_location">Location</string>
    <string name="text_home_temperature">Temperature</string>
    <string name="text_home_notifications">Notifications</string>
    <string name="text_home_recent">Recent Chats</string>
    <string name="title_home">Home</string>
    <string name="title_weather">Weather</string>
    <string name="title_contacts">Contacts</string>

    <!--String resources for various connections actions-->
    <string name="title_contacts_connections">Connections</string>
    <string name="title_contactinfo_contacts">Contacts</string>
    <string name="title_requestinfo_requests">Pending Requests</string>
    <string name="title_inviteinfo_invites">Invites</string>
    <string name="button_inviteinfo_invite">Invite Friend</string>

    <string name="title_themes_toolbar">Choose A Theme</string>
    <string name="title_cherry_toolbar">Cherry</string>
    <string name="title_orange_toolbar">Orange</string>
    <string name="title_pacnw_toolbar">PacNW</string>

    <string name="title_chats">Chats</string>
    <string name="button_weather_search">Go</string>

    <!--  Chat Card  -->
    <string name="chat_card_name">Placeholder Name</string>
    <string name="chat_card_time">12:00 AM</string>
    <string name="chat_card_last_message">This is a placeholder message. :)</string>

    <!--  Database URLS  -->
    <string name="base_url">https://production-tcss450-backend.herokuapp.com/</string>

    <!--Charles string resources for signin and registration-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="reg">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="hello">Hello </string>
    <string name="home">Home</string>

    <string name="button_weather_add">Add Location</string>
    <string name="text_weather_search">Enter a zipcode</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>

    <!-- String resources for signin and shared preferences -->
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_theme">Shared Prefs Theme</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="text_email_sent">A verification email has been sent</string>
    <string name="text_email_not_verified">Email has not been verified</string>
    <string name="button_resend">Resend Email</string>

    <string name="button_reset_password">Reset Password</string>
    <string name="hint_code">Verification Code</string>
    <string name="text_password_constraint1">* Must be at least 8 characters</string>
    <string name="text_password_constraint2">* Must contain an upper case letter</string>
    <string name="text_password_constraint3">* Must contain a lower case letter</string>
    <string name="text_password_constraint4">* Must contain a number</string>
    <string name="text_password_constraint5">* Must contain a special character</string>

    <string name="checkbox_contact_chatinvite">Chat Invite</string>
    <string name="invite_sent">Invite Sent!</string>
    <string name="button_accept">Accept</string>
    <string name="requests_decline">Decline</string>
    <string name="create_chat_descr">Add Contacts to Chat</string>
    <string name="friend_has_been_invited">Friend has been invited!</string>
    <string name="text_chat_created">A chat room has been successfully created</string>
    <string name="title_activity_maps">Map</string>
    <string name="checkbox_request_accept">Accept</string>

    <!--  Change Password Fragment Resources  -->
    <string name="fragment_change_password_title">Change Password</string>
    <string name="action_change_password">Change Password</string>
    <string name="hint_password_current">Current Password</string>
    <string name="hint_password_new">New Password</string>
    <string name="hint_change_password_again">Retype Password</string>
    <string name="text_password_invalid">Password is invalid.</string>
    <string name="snackbar_password_sent">Password Change Request being sent!</string>
    <string name="snackbar_password_change_success">Password has been successfully reset. Signing out…</string>
    <string name="snackbar_password_sent_failure">Password failed to reset. Please check valid password for both current and new</string>
    <string name="select_contact">Select Contact</string>
    <string name="contacts_users_deleted">Users Deleted</string>
    <string name="contact_delete">Delete Users</string>
    <string name="contact_search">Search Users</string>
    <string name="create_chat">Create Chat</string>

    <!-- Contact search method string array-->
    <string-array name="search_array">
        <item>First, Last</item>
        <item>MemberID</item>
        <item>Email</item>
    </string-array>

    <string name="label_location">Current Location:</string>
    <string name="label_location_button">Add Location</string>
    <string name="title_chat_members">Chat Members</string>
    <string name="chat_member_name">Name</string>
    <string name="chat_member_id">123</string>
</resources>
