<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/bottom_nav_menu">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/title_weather" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chats_black_24dp"
        android:title="@string/title_chats" />

</navigation>