<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/contactButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="27dp"
        android:text="@string/title_contactinfo_contacts"

        app:layout_constraintBottom_toTopOf="@+id/requestRecycler"
        app:layout_constraintEnd_toStartOf="@+id/requestButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/requestButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="27dp"
        android:text="@string/title_requestinfo_requests"
        android:backgroundTint="@color/button_dark_red"
        app:layout_constraintBottom_toTopOf="@+id/requestRecycler"
        app:layout_constraintEnd_toStartOf="@+id/inviteButton"
        app:layout_constraintStart_toEndOf="@+id/contactButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inviteButton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="27dp"
        android:text="@string/title_inviteinfo_invites"
        app:layout_constraintBottom_toTopOf="@+id/requestRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/requestButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/requestRecycler"
        android:name="edu.uw.tcss450.stran373.ui.Contact.ContactsInfo.RequestCard"
        android:layout_width="416dp"
        android:layout_height="493dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".edu.uw.tcss450.stran373.ui.Contact.ContactsInfo.RequestListFragment"
        tools:listitem="@layout/fragment_request_card" />

</androidx.constraintlayout.widget.ConstraintLayout>